# 02476_FinalProject_Group20

./: .dvcignore  .gitignore  .pre-commit-config.yaml  DELEGATION.txt  README.md  cli.py  dockerfile  environment.yml  locustfile.py  pyproject.toml  python_libraies.txt  questions.txt  requirements.txt  requirements_old.txt  tasks.py
02476_FinalProject_Group20/: .gitignore  DELEGATION.txt  Dockerfile  LICENSE  Makefile  README.md  cli.py  enviroment.yml  environment.yml  pyproject.toml  requirements.txt  tasks.py
02476_FinalProject_Group20/.github/workflows/: docker-build.yml  model_change.yml  model_registry_change.yaml  tests.yaml
02476_FinalProject_Group20/configs/: config.yaml  sweep_config.yaml
02476_FinalProject_Group20/configs/experiments/: experiment2.yaml
02476_FinalProject_Group20/configs/model_conf/: default.yaml
02476_FinalProject_Group20/dockerfiles/: api.dockerfile
02476_FinalProject_Group20/docs/: mkdocs.yaml  mkdocs.yml
02476_FinalProject_Group20/htmlcov/: z_b01db64b84a7e261___init___py.html  z_b01db64b84a7e261_api_onnx_py.html  z_b01db64b84a7e261_data_py.html  z_b01db64b84a7e261_model_py.html  z_b01db64b84a7e261_test_py.html  z_b01db64b84a7e261_train_py.html  z_b01db64b84a7e261_visualize_py.html
02476_FinalProject_Group20/log/: airtilhendebjrn.students.clients.local_47650.1737657235052244000.pt.trace.json  airtilhendebjrn.students.clients.local_51132.1737658497963388000.pt.trace.json
02476_FinalProject_Group20/reports/: README copy.md  README.md
02476_FinalProject_Group20/rice/: __init__.py  dataset.py  features.py  plots.py
02476_FinalProject_Group20/tests/: test_api.py  test_data.py  test_model.py  test_train.py  test_training.py
02476_FinalProject_Group20/wandb/: latest-run
conf/: config.yaml
rice/: LICENSE  (+8 more)
(+254 files in other folders)
