[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rice"
version = "0.0.1"
description = "A classification model of different rice types"
authors = [
  { name = "Alexander Guldager, Bj\u00f8r Sch\u00f8nbech M\u00f8ller, Rasmus N\u00f8rgaard Jensen" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rice"]
force_sort_within_sections = true
