[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rice"
version = "0.0.1"
description = "A project for implementation of MLOps best practices, to deploy a classification model that classifies different types of rice."
authors = [
  { name = "Alexander Guldager, Bj\u00f8rn Sch\u00f8nbech M\u00f8ller, Rasmus N\u00f8rgaard Jensen", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
